# bisection-method

./: .coverage  README.md  pyproject.toml  run.py
.github/: tests.yml
.github/workflows/: tests.yml
hw1/: run.py
hw1/src/: tests.py
src/: bisection.py  tests.py
