[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bisection-method"
version = "0.0.0"
authors = [
  { name="Ryan Engle", email="rtengle@bu.edu" },
]
description = "bisection-method workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy==1.26.4",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "pytest-timeout==2.2.0"
]

[project.urls]
"Homepage" = "https://github.com/rtengle/bisection-method"
"Bug Tracker" = "https://github.com/rtengle/bisection-method/issues"